<resources>
    <string name="app_name">AndroidChat</string>
    <string name="host_game">HOST GAME</string>
    <string name="join_game">JOIN GAME</string>
    <string name="host_start_game">START GAME</string>
    <string-array name="number_players">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="number_players_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="distribute_gold">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="distribute_wineskin">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="distribute_fight_willpower">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="distribute_fight_gold">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="falcon_trade_item_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="number_players">PLAYERS</string>
    <string name="create_lobby">CREATE LOBBY</string>
    <string-array name="character_class">
        <item>WARRIOR</item>
        <item>ARCHER</item>
        <item>WIZARD</item>
        <item>DWARF</item>
    </string-array>
    <string name="ready">READY</string>
    <string name="join_lobby">JOIN LOBBY</string>
    <string name="options">OPTIONS</string>
    <string name="chat">CHAT</string>
    <string name="Back">BACK</string>
    <string name="Character">CHARACTER</string>
    <string name="free_actions">FREE ACTIONS</string>
    <string name="Tasks">TASKS</string>
    <string name="Settings">SETTINGS</string>
    <string name="LeaveGame">LEAVE GAME</string>
    <string name="SaveGame">SAVE GAME</string>
    <string name="Help">HELP</string>
    <string name="Player1">Player 1: </string>
    <string name="Player2">Player 2: </string>
    <string name="Player3">Player 3: </string>
    <string name="Player4">Player 4: </string>
    <string name="wait_screen_hero">Hero: </string>
    <string name="not_ready">NOT READY</string>
    <string name="confirm_hero">CONFIRM HERO</string>
    <string name="leave_lobby">LEAVE LOBBY</string>
    <string name="surrender">SURRENDER</string>
    <string name="use_item">USE ITEM</string>
    <string name="attack">ATTACK</string>
    <string name="battle_value">BATTLE VALUE</string>
    <string name="base_battle_value">0</string>
    <string name="warrior">WARRIOR</string>
    <string name="wizard">WIZARD</string>
    <string name="archer">ARCHER</string>
    <string name="dwarf">DWARF</string>
    <string name="wp">WP: 0</string>
    <string name="sp">SP: 0</string>
    <string name="bv">BV: 0</string>
    <string name="get_dice">GET DICE</string>
    <string name="get_enemy_dice">GET ENEMY DICE</string>
    <string name="end_battle_round">END ROUND</string>
    <string name="calculate_battle_value">CALCULATE BATTLE VALUE</string>
    <string name="calculate_enemy_battle_value">CALCULATE ENEMY BATTLE VALUE</string>
    <string name="roll_dice">ROLL DICE</string>
    <string name="roll_enemy_dice">ROLL ENEMY DICE</string>
    <string name="enemy_name">ENEMY</string>
    <string name="activate_fog">ACTIVATE FOG</string>
    <string name="empty_well">EMPTY WELL</string>
    <string name="interact_item">INTERACT ITEM</string>
    <string name="trade">TRADE</string>
    <string name="merchant">MERCHANT</string>
    <string name="use_article">USE ARTICLE</string>
    <string name="pick_up_item">PICK UP ITEM</string>
    <string name="drop_item">DROP ITEM</string>
    <string name="get_items">GET ITEMS</string>
    <string name="willpower">WP</string>
    <string name="price">2 gold / item</string>
    <string name="bow">Bow</string>
    <string name="helm">Helm</string>
    <string name="telescope">Telescope</string>
    <string name="shield">Shield</string>
    <string name="falcon">Falcon</string>
    <string name="wineskin">Wineskin</string>
    <string name="add_drop_gold">ADD/DROP GOLD</string>
    <string name="confirm">CONFIRM</string>
    <string name="farmer">FARMER</string>
    <string name="pick_up_farmer">PICK UP FARMER</string>
    <string name="drop_farmer">DROP FARMER</string>
    <string name="get_my_farmer">GET MY FARMERS</string>
    <string name="get_farmers">GET FARMERS</string>
    <string name="get_available_regions">GET AVAILABLE REGIONS</string>
    <string-array name="action"></string-array>
    <string name="witchbrew">Witch\'s Brew</string>
    <string name="med_herb">Medicinal Herb</string>
    <string name="rune_stoneG">Rune Stone G</string>
    <string name="rune_stoneB">Rune Stone B</string>
    <string name="rune_stoneY">Rune Stone Y</string>
    <string name="title_activity_event_card">Event Card</string>
    <string name="load_game">LOAD GAME</string>
    <string name="use_bow">USE BOW</string>
    <string-array name="wizard_flip_index">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="flip_btn">FLIP</string>
    <string name="get_saved_games">GET SAVED GAMES</string>
</resources>
