<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/options_background"
    tools:context=".OptionsTab">


    <Button
        android:id="@+id/tasksb"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="170dp"
        android:text="@string/Tasks"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Tasks" />

    <Button
        android:id="@+id/characterb"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginStart="298dp"
        android:layout_marginLeft="298dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="298dp"
        android:layout_marginRight="298dp"
        android:text="@string/Character"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Character" />

    <Button
        android:id="@+id/actionsb"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:text="@string/Actions"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Actions" />

    <Button
        android:id="@+id/savegameb"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="56dp"
        android:text="@string/SaveGame"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasksb"
        tools:text="Save Game" />

    <Button
        android:id="@+id/leavegameb"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="56dp"
        android:text="@string/LeaveGame"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionsb"
        tools:text="Leave Game" />

    <Button
        android:id="@+id/backb"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/back_icon"
        android:rotation="180"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>