<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fight_background"
    tools:context="com.example.LegendsOfAndor.MonsterFight">

    <Button
        android:id="@+id/use_item_btn"
        android:layout_width="96dp"
        android:layout_height="56dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/gothic"
        android:text="@string/use_item"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/surrender_btn" />

    <Button
        android:id="@+id/attack_btn"
        android:layout_width="96dp"
        android:layout_height="56dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginBottom="115dp"
        android:fontFamily="@font/gothic"
        android:text="@string/attack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="132dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/battle_value"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerBattleValue"
        android:layout_width="66dp"
        android:layout_height="44dp"
        android:layout_marginStart="336dp"
        android:layout_marginLeft="336dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="410dp"
        android:layout_marginRight="410dp"
        android:background="#09A5E2"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/base_battle_value"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/monsterBattleValue"
        android:layout_width="66dp"
        android:layout_height="44dp"
        android:layout_marginStart="410dp"
        android:layout_marginLeft="410dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="336dp"
        android:layout_marginRight="336dp"
        android:background="@color/red"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/base_battle_value"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/surrender_btn"
        android:layout_width="96dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/surrender"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727">

        <ImageView
            android:id="@+id/playerDice1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_gravity="center"
            app:srcCompat="@drawable/dice_1"
            tools:layout_editor_absoluteX="357dp"
            tools:layout_editor_absoluteY="205dp" />

        <ImageView
            android:id="@+id/playerDice2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_gravity="center"
            app:srcCompat="@drawable/dice_1"
            tools:layout_editor_absoluteX="427dp"
            tools:layout_editor_absoluteY="205dp" />

        <ImageView
            android:id="@+id/playerDice4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="1"
            app:srcCompat="@drawable/dice_1"
            tools:layout_editor_absoluteX="419dp"
            tools:layout_editor_absoluteY="275dp" />

        <ImageView
            android:id="@+id/playerDice3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="1"
            app:srcCompat="@drawable/dice_1"
            tools:layout_editor_absoluteX="357dp"
            tools:layout_editor_absoluteY="285dp" />


    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/warrior"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="108dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/wizard"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/dwarf"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="108dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/archer"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="57dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="133dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="57dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="133dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/wp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="108dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/wp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/wp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="108dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/wp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent" />


    x


</androidx.constraintlayout.widget.ConstraintLayout>