<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/options_background"
    tools:context=".Free_Actions">

    <Button
        android:id="@+id/tradeb"
        android:layout_width="166dp"
        android:layout_height="63dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="84dp"
        android:text="Add/Drop Items"
        android:textSize="28sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/articleb"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="84dp"
        android:text="@string/use_article"
        android:textSize="28sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/wellb"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:text="@string/empty_well"
        android:textSize="28sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/merchantb"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="84dp"
        android:text="@string/merchant"
        app:fontFamily="@font/gothic"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/interactItem"
        android:layout_width="166dp"
        android:layout_height="63dp"
        android:text="Add/Drop Gold"
        android:textSize="28sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/farmer"
        android:layout_width="166dp"
        android:layout_height="63dp"
        android:layout_marginStart="282dp"
        android:layout_marginLeft="282dp"
        android:layout_marginEnd="283dp"
        android:layout_marginRight="283dp"
        android:layout_marginBottom="84dp"
        android:text="@string/farmer"
        android:textSize="28sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backb"
        android:layout_width="64dp"
        android:layout_height="47dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/back_icon"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>