<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wait_background"
    tools:context="com.example.LegendsOfAndor.WaitScreen">

    <TextView
        android:id="@+id/ready2"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/not_ready"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/ready3"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/not_ready"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@color/transparent_gray"
        android:text="@string/wait_screen_hero"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player3" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:background="@color/transparent_gray"
        android:text="@string/wait_screen_hero"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:background="@color/transparent_gray"
        android:text="@string/wait_screen_hero"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player4" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@color/transparent_gray"
        android:text="@string/wait_screen_hero"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1" />

    <View
        android:id="@+id/divider"
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="308dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/transparent_gray"
        android:text="@string/Player1"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:background="@color/transparent_gray"
        android:text="@string/Player2"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player3"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="181dp"
        android:layout_marginBottom="108dp"
        android:background="@color/transparent_gray"
        android:text="@string/Player3"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player4"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:layout_marginBottom="108dp"
        android:background="@color/transparent_gray"
        android:text="@string/Player4"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:text="@string/ready"
        android:textOff="@string/ready"
        android:textOn="@string/not_ready"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/gray"
        android:entries="@array/character_class"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <TextView
        android:id="@+id/ready1"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/not_ready"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/ready"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/not_ready"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:fontFamily="@font/gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/gray"
        android:fontFamily="@font/gothic"
        android:text="@string/confirm_hero"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
